# paxoslease

./: README.rst  stack.yaml
indexed-prelude/: indexed-prelude.cabal
indexed-prelude/src/Control/Monad/Indexed/: Prelude.hs
indexed-prelude/test/: Main.hs
paxoslease/: paxoslease.cabal
paxoslease-interactive/: LICENSE  paxoslease-interactive.cabal
paxoslease-interactive/src/: Lib.hs  paxoslease-interactive-acceptor.hs  paxoslease-interactive-proposer.hs
paxoslease/src/Control/Monad/Indexed/State/: Orphans.hs
paxoslease/src/Network/PaxosLease/: Acceptor.hs  Proposer.hs  Types.hs
paxoslease/src/Network/PaxosLease/Acceptor/: FSM.hs
paxoslease/src/Network/PaxosLease/Proposer/: FSM.hs
