Name:           indexed-prelude
Version:        0.0.0.1
Synopsis:       A minimal Prelude for indexed monads
Homepage:       https://github.com/NicolasT/paxoslease
License:        BSD3
License-File:   LICENSE
Author:         Nicolas Trangez
Maintainer:     ikke@nicolast.be
Copyright:      (c) 2016, Nicolas Trangez
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

Library
  Hs-Source-Dirs:       src
  Exposed-Modules:      Control.Monad.Indexed.Prelude
  Build-Depends:        base >= 4.8 && < 4.9
                      , indexed >= 0.1 && < 0.2
  Default-Language:     Haskell2010

Test-Suite indexed-prelude-test
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       test
  Main-Is:              Main.hs
  Build-Depends:        base
                      , indexed-prelude
  Default-Language:     Haskell2010

Source-Repository head
  Type:         git
  Location:     https://github.com/NicolasT/paxoslease.git
  Subdir:       indexed-prelude
