Name:           paxoslease
Version:        0.0.0.1
Synopsis:       A model implementation of the PaxosLease protocol
Homepage:       https://github.com/NicolasT/paxoslease
License:        BSD3
License-File:   LICENSE
Author:         Nicolas Trangez
Maintainer:     ikke@nicolast.be
Copyright:      (c) 2016, Nicolas Trangez
Category:       Network
Build-Type:     Simple
Cabal-Version:  >=1.10

Library
  Hs-Source-Dirs:       src
  Exposed-Modules:      Network.PaxosLease.Acceptor
                      , Network.PaxosLease.Proposer
  Other-Modules:        Control.Monad.Indexed.State.Orphans
                      , Network.PaxosLease.Acceptor.FSM
                      , Network.PaxosLease.Proposer.FSM
                      , Network.PaxosLease.Types
  Build-Depends:        base >= 4.8 && < 4.9
                      , free >= 4.12 && < 4.13
                      , indexed-extras >= 0.2 && < 0.3
                      , lens >= 4.13 && < 4.14
                      , mtl >= 2.2 && < 2.3
                      , transformers >= 0.4 && < 0.5
                      , indexed-prelude == 0.0.0.1
  Default-Language:     Haskell2010

Source-Repository head
  Type:         git
  Location:     https://github.com/NicolasT/paxoslease
  Subdir:       paxoslease
